# easel

./: README.md  io.github.drvonmiau.Easel.json  meson.build
.github/workflows/: bundle.yml  flatpak-repo.yml
data/: io.github.drvonmiau.Easel.desktop.in  io.github.drvonmiau.Easel.gschema.xml  io.github.drvonmiau.Easel.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: DISTRIBUTION.md
po/: POTFILES  meson.build
src/: easel.gresource.xml  easel.in  library.py  main.py  meson.build  models.py  style.css  widgets.py  window.py  window.ui
src/gtk/: help-overlay.ui
